# octopoid

./: .gitignore  .gitmodules  ANALYSIS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  README.md  SETUP_LOG.md  TESTING_PLAN.md  TEST_STATUS.md  conftest.py  octopoid-dash  octopoid-dash.py  package.json  philosophy.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  setup-dev.sh  setup.py  tsconfig.base.json
.octopoid/: .gitignore  README.md  agents.yaml  config.yaml  global-instructions.md  jobs.yaml  test-task-1fdc070d-completed.txt
.orchestrator/: agents.yaml
docs/: IMPLEMENTATION_TASKS.md  SERVER_DEBUG_ENDPOINTS.md  architecture-v2.md  architecture.md  deployment.md  flows.md  github-issue-monitor.md  local-upgrade-guide.md  migration-v2.md  post-draft-50-guide.md  publishing-setup.md  publishing.md  quickstart-v2.md  testing.md  v2-IMPLEMENTATION_STATUS.md
octopoid/: __init__.py  agent_markers.py  agent_run_log.py  checks.py  cli.py  com.octopoid.scheduler.plist  config.py  flow.py  git_utils.py  housekeeping.py  init.py  job_conditions.py  jobs.py  lock_utils.py  message_dispatcher.py  pool.py  port_utils.py  pr_utils.py  prompt_renderer.py  proposal_utils.py  queue_manager_logging.py  repo_manager.py  reports.py  result_handler.py  review_utils.py  scheduler.py  steps.py  system_health.py  task_logger.py  task_thread.py  tasks.py
orchestrator/: __init__.py  actions.py  approve_orch.py  backpressure.py  breakdowns.py  cli.py  com.octopoid.scheduler.plist  compat.py  config.py  (+32 more)
(+821 files in other folders)
